objects/fferpcore__DPNodeDeclaration__c.object
<CustomObject>
    <description>Declaration of a node in a publisher&apos;s structure.</description>
    <fields>
        <fullName>fferpcore__ErrorMessage__c</fullName>
        <description>The result of a failed merge onto a message description</description>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__JsonPath__c</fullName>
        <description>The insertion point within the message, this field itself is a JSON String Array</description>
        <label>JSON Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__LiteralSourceData__c</fullName>
        <description>When Source Type is Literal, this is the data.</description>
        <label>Literal Source Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__LiteralSourceDescription__c</fullName>
        <description>When Source Type is Literal or Pass Through, this is the Description</description>
        <label>Literal Source Description</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__NodeType__c</fullName>
        <description>Determines the type of JSON structure generated by this Node.</description>
        <label>Node Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scalar</fullName>
                </value>
                <value>
                    <fullName>Map</fullName>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__Publication__c</fullName>
        <label>Publication</label>
        <referenceTo>fferpcore__MessagingPublication__c</referenceTo>
        <relationshipLabel>Declarative Nodes</relationshipLabel>
        <relationshipName>DeclarativeNodes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>fferpcore__Sequence__c</fullName>
        <description>Order that the nodes have to be built in order to build up the message.</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__SourceKey__c</fullName>
        <description>When Source Type is From Context, this is the key to give to the Context to create the Source.</description>
        <label>Source Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__SourceType__c</fullName>
        <label>SourceType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FromContext</fullName>
                </value>
                <value>
                    <fullName>Literal</fullName>
                </value>
                <value>
                    <fullName>Passthrough</fullName>
                </value>
                <value>
                    <fullName>Composite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__UniquenessConstraint__c</fullName>
        <label>Uniqueness Constraint</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Declarative Publication Node</label>
    <nameField>
        <displayFormat>DPN-{00000000}</displayFormat>
        <label>Declarative Publication Node</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Declarative Publication Node</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>